<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.wcs.vcc.mvvm.ui.base.activity.cyclecount.CycleCountActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_cycle_count_menu"
        android:title="@string/tat_ca"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_all"
                    android:checked="true"
                    app:showAsAction="always"
                    android:title="@string/tat_ca" />
                <item
                    android:id="@+id/action_normal"
                    android:title="@string/normal" />
                <item
                    android:id="@+id/action_blind"
                    android:title="@string/blind" />
                <item
                    android:id="@+id/action_random"
                    android:title="@string/random" />
            </group>
        </menu>
    </item>

</menu>