<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="horizontal">

    <TextView
        android:text="@string/plt_no"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/text_selected"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        android:gravity="center"/>


    <TextView
        android:text="@string/sl_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/text_selected"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="#E91E63"
        android:gravity="center"/>


    <TextView
        android:text="@string/tl_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/text_selected"
        android:textColor="@color/colorIndigoAccent"
        android:textSize="16dp"
        android:textStyle="bold"
        android:gravity="center"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/text_selected"
        android:textColor="#3F51B5"
        android:gravity="center"
        android:textSize="17dp"
        android:textStyle="bold"
        android:text="@string/sl_scan" />

    <TextView
        android:text="@string/sl_miss"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/text_selected"
        android:textColor="#FF5722"
        android:textStyle="bold"
        android:textSize="16dp"
        android:gravity="center"/>
</LinearLayout>