<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wcs.vcc.main.giaonhanhoso.GiaoHoSoActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/stat_sys_download"
        android:title="@string/offline_update_data"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sync"
        android:icon="@android:drawable/stat_notify_sync"
        android:title="@string/offline_sync"
        app:showAsAction="ifRoom" />
</menu>