<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:minHeight="38dp"
              android:orientation="horizontal">

    <TextView
        android:id="@+id/item_products_of_store_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="40"
        android:background="@drawable/outline_right_bottom_dark"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/item_products_of_store_booking_weight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:background="@drawable/outline_right_bottom_dark"
        android:gravity="center"
        android:text="@string/order"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/item_products_of_store_actual_weight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:background="@drawable/outline_right_bottom_dark"
        android:gravity="center"
        android:text="@string/gross"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/item_products_of_store_basket"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:background="@drawable/outline_right_bottom_dark"
        android:gravity="center"
        android:text="@string/basket"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/item_products_of_store_dispatched_actual_carton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:background="@drawable/outline_right_bottom_dark"
        android:gravity="center"
        android:text="@string/ctns"
        android:textColor="@android:color/black"/>

</LinearLayout>