<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="Chọn mạng"
        android:textColor="#000"/>

    <RadioGroup
        android:id="@+id/rb_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/use_local"/>

        <RadioButton
            android:id="@+id/rb_global"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_public"/>

        <RadioButton
            android:id="@+id/rb_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_another_network"/>
    </RadioGroup>

    <EditText
        android:id="@+id/et_manual_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="16dp"
        android:hint="@string/hint_ip_address"
        android:text="10.0.10.14"
        android:visibility="gone"/>


    <View
        android:id="@+id/line_horizontal_1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#ddd"/>

    <LinearLayout
        android:id="@+id/rl_main_setting_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="3"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/spinner_main_setting_places"
            android:layout_below="@id/line_horizontal_1"
            android:layout_weight="0.5"
            android:text="@string/chi_nhanh"
            android:textColor="#000"/>

        <Spinner
            android:id="@+id/spinner_main_setting_places"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/line_horizontal_1"
            android:layout_weight="2.5"
            android:layout_centerVertical="true"/>



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#ddd"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/access_location"
            android:textColor="#000"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sc_access_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
